--- a/src/components/mainApp/App.css
+++ b/src/components/mainApp/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url(https://images.pexels.com/photos/313782/pexels-photo-313782.jpeg?cs=srgb&dl=pexels-quintin-gellar-313782.jpg&fm=jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
