--- a/src/appComponents/mainApp/mainApp.css
+++ b/src/appComponents/mainApp/mainApp.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url(https://images.pexels.com/photos/313782/pexels-photo-313782.jpeg?cs=srgb&dl=pexels-quintin-gellar-313782.jpg&fm=jpg);
-  background-size: 100% 100%;
+  background-size: 100%;
 }
 
 code {
