--- a/src/appComponents/mainApp/mainApp.css
+++ b/src/appComponents/mainApp/mainApp.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(https://images.pexels.com/photos/313782/pexels-photo-313782.jpeg?cs=srgb&dl=pexels-quintin-gellar-313782.jpg&fm=jpg);
+  background-image: url(https://images.unsplash.com/photo-1653035713470-0e0f03748591);
   background-size: 100%;
 }
 
